--- a/Finalproject.ipynb
+++ b/Finalproject.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled16.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPlVg1pozhz8sZ8IIerFWLg",
+      "authorship_tag": "ABX9TyMsHMscVmVw38M98RFpy0JG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         "df.info()\r\n",
         "\r\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
         "df = df.drop(['school', 'address', 'famsize', 'Mjob', 'Fjob', 'reason', 'guardian', 'schoolsup', 'famsup', 'paid', 'activities', 'nursery', 'higher', 'internet', 'romantic'], axis=1)\r\n",
         "df.head(5)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -327,7 +327,7 @@
       "source": [
         "df.tail(5)\r\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -520,7 +520,7 @@
       "source": [
         "df.count()\r\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -577,7 +577,7 @@
         "df=df.drop_duplicates()\r\n",
         "df.head(5)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -755,7 +755,8 @@
         "id": "jhvB8sLPEkHd"
       },
       "source": [
-        "Dropped the missing or null values."
+        "Dropped the missing or null values.\r\n",
+        "There is no null values or missing values."
       ]
     },
     {
@@ -770,7 +771,7 @@
       "source": [
         "print(df.isnull().sum())"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -805,7 +806,8 @@
         "id": "Ab1khgHkEyoX"
       },
       "source": [
-        "After dropping the missing values"
+        "After dropping the missing values.\r\n",
+        "The number of lines stays the same since nothing got dropped. "
       ]
     },
     {
@@ -821,7 +823,7 @@
         "df=df.dropna()\r\n",
         "df.count()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -861,7 +863,8 @@
         "id": "TsgEHn9fE-Jy"
       },
       "source": [
-        "After dropping the values."
+        "After dropping the values.\r\n",
+        "The number stays the same since nothing got dropped. "
       ]
     },
     {
@@ -876,7 +879,7 @@
       "source": [
         "print(df.isnull().sum())"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -912,7 +915,8 @@
       },
       "source": [
         "Detecting the outliers\r\n",
-        "(there is one outlier for age)"
+        "(there is one outlier for age).\r\n",
+        "The age is basically between 16 and 18 with one outlier that is 22. "
       ]
     },
     {
@@ -928,7 +932,7 @@
       "source": [
         "sns.boxplot(x=df['age']) "
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -963,7 +967,7 @@
         "id": "z9zvx0I7FVqa"
       },
       "source": [
-        "There is one outlier for freetime. "
+        "There is one outlier for freetime. That outlier is only 1 hour of freetime while everyone else had between 3 and 4 hours of freetime. "
       ]
     },
     {
@@ -979,7 +983,7 @@
       "source": [
         "sns.boxplot(x=df['freetime'])"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1014,7 +1018,7 @@
         "id": "e322F3ufFfEb"
       },
       "source": [
-        "There is 13 outliers for absences. "
+        "There is 13 outliers for absences. There was a lot of children that had absences above the average amount of between 0 and 8. "
       ]
     },
     {
@@ -1030,7 +1034,7 @@
       "source": [
         "sns.boxplot(x=df['absences'])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1074,7 +1078,7 @@
         "IQR=Q3-Q1\r\n",
         "print(IQR)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1114,7 +1118,7 @@
         "df=df[~((df<(Q1 -1.5 * IQR))|(df>(Q3 + 1.5 * IQR))).any(axis=1)]\r\n",
         "df.shape"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1136,7 +1140,8 @@
         "id": "jViHzjNwF2p-"
       },
       "source": [
-        "Histogram. Kids age and failure of class."
+        "Histogram. Kids age and failure of class. Does age have to do with class failures?\r\n",
+        "The older the kids got the less failures there was. "
       ]
     },
     {
@@ -1155,7 +1160,7 @@
         "plt.ylabel('failures')\r\n",
         "plt.xlabel('age');\r\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1178,7 +1183,9 @@
         "id": "wjySggsxGJJ3"
       },
       "source": [
-        "Heat map which helps to find the dependent variables. "
+        "Heat map which helps to find the dependent variables. \r\n",
+        "Is health the reason for absence?\r\n",
+        "It is only the reason for -0.046% of the absences. "
       ]
     },
     {
@@ -1197,7 +1204,7 @@
         "sns.heatmap(c,cmap=\"BrBG\", annot=True)\r\n",
         "c\r\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1600,6 +1607,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f6UPs946IqKO"
+      },
+      "source": [
+        "Does the absences effect studytime? \r\n",
+        "I want to say that it does but since it looks like the results are unidentified. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1616,7 +1633,7 @@
         "ax.set_ylabel('absences')\r\n",
         "plt.show()\r\n"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
